# redis-compressed

./: AGENTS.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-and-test.yml  build.yml  ci.yml  release.yml
include/: redismodule.h
src/: main.c
test/: utils.js
test/tests/: integration.js
